<resources>
    <string name="app_name">HomePage</string>
    <string name="action_settings">Settings</string>
    <string name="title">DormSwappers</string>
    <string name="summary">Your New Home is a Click Away!</string>
    <string name="button1_message">Click Here to Start Your Search</string>
    <string name="desc">Image1</string>
    <string name="title_activity_page2">Page2</string>
    <string name="Location">Choose a Location in the BU Area</string>
    <string name="box1">East Campus</string>
    <string name="box2">Central Campus</string>
    <string name="box3">West Campus</string>
    <string name="box4">South Campus</string>
    <string name="button2_message">Save Preferences</string>
    <string name="title_activity_page3">Page3</string>
    <string name="title_activity_page4">Page4</string>
    <string name="title_activity_page5">Page5</string>
    <string name="title_activity_page6">Page6</string>
    <string name="east">TODO</string>
    <string name="east_message">You are Viewing East Campus: You Can Choose a Building or Go Back</string>
    <string name="box5">Myles Annex Hall</string>
    <string name="box6">Myles Standish Hall</string>
    <string name="box7">Danielson Hall</string>
</resources>
